<resources>
    <string name="app_name">Momentum</string>

    <string name="drawer_title_market">Market</string>
    <string name="drawer_title_trending">Trending</string>
    <string name="drawer_title_portfolio">Portfolio</string>
    <string name="drawer_title_favorite">Favorite</string>
    <string name="drawer_title_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
</resources>
